Manage to load 2 seperate video and stitch together.

--- a/index.html
+++ b/index.html
@@ -127,9 +127,11 @@
     <canvas id="glcanvas">
       Your browser doesn't appear to support the HTML5 <code>&lt;canvas&gt;</code> element.
     </canvas>
-    <video class="hidden" preload="auto" id="video" loop="true" webkit-playsinline crossOrigin="anonymous">
-      <source src="therelaxatron2.mp4" type="video/mp4">
-      <source src="therelaxatron.webm" type="video/webm">
+    <video class="hidden" preload="auto" id="video1" loop="true" webkit-playsinline crossOrigin="anonymous">
+      <source src="car_2k_left.mp4" type="video/mp4">
+    </video>
+    <video class="hidden" preload="auto" id="video2" loop="true" webkit-playsinline crossOrigin="anonymous">
+      <source src="car_2k_right.mp4" type="video/mp4">
     </video>
         <!-- Video Controls -->
         <div id="video-controls" class="hidden">
@@ -164,7 +166,7 @@
           <a id="full-screen" class="fa fa-expand icon rfloat" title="Full Screen"></a>
 
           <b id="$$$" class="rfloat">info</b>
-          
+
         </div>
 
         <script>runEleVRPlayer();</script>
