--- a/index.html
+++ b/index.html
@@ -95,8 +95,16 @@
   }
 </script>
 
+<style>
+    video {
+       width: 640px;
+       height: 360px;
+    }
+</style>
+
 <link rel="stylesheet" href="css/font-awesome.css">
 <link rel="stylesheet" href="css/elevr-player.css">
+<script src="http://cdn.dashjs.org/latest/dash.all.min.js"></script>
 <script src="lib/gl-matrix.js" type="text/javascript"></script>
 <script src="lib/util.js" type="text/javascript"></script>
 <script src="js/controls.js" type="text/javascript"></script>
@@ -104,9 +112,28 @@
 <script src="js/webvr.js" type="text/javascript"></script>
 <script src="js/phonevr.js" type="text/javascript"></script>
 <script src="js/elevr-player.js" type="text/javascript"></script>
+<script>
+    var media_events = ["loadstart",  "suspend", "abort", "error", "emptied", "stalled", "loadedmetadata", "loadeddata", "canplay", "canplaythrough", "playing", "waiting", "seeking", "seeked", "ended", "durationchange", "play", "pause", "ratechange", "resize", "volumechange"];
+    // add "progress" and "timeupdate" if you want verbose updates
+
+    function init()
+    {
+      var vvv = document.querySelector("#video");
+      for (var key in media_events)
+      {
+          vvv.addEventListener(media_events[key], capture, false);
+      }
+    }
+
+    function capture(event)
+    {
+        $$$.innerHTML = event.type;
+    }
+
+  </script>
 </head>
 
-<body>
+<body onload="init()">
   <div id="video-container">
     <!-- Loading Message -->
     <div id="left-load" class="left">
@@ -127,10 +154,11 @@
     <canvas id="glcanvas">
       Your browser doesn't appear to support the HTML5 <code>&lt;canvas&gt;</code> element.
     </canvas>
-    <video class="hidden" preload="auto" id="video" loop="true" webkit-playsinline crossOrigin="anonymous">
-      <source src="therelaxatron2.mp4" type="video/mp4">
-      <source src="therelaxatron.webm" type="video/webm">
+    <video  class="hidden" preload="auto" id="video" loop="true" webkit-playsinline crossOrigin="anonymous">
+      <!-- data-dashjs-player -->
+      <!-- <source src="http://dash.edgesuite.net/envivio/EnvivioDash3/manifest.mpd" type="application/dash+xml"> -->
     </video>
+    <!-- <video data-dashjs-player autoplay src="http://dash.edgesuite.net/envivio/EnvivioDash3/manifest.mpd" controls></video> -->
         <!-- Video Controls -->
         <div id="video-controls" class="hidden">
           <a id="play-pause" class="fa fa-play icon" title="Play"></a>
@@ -153,6 +181,7 @@
           </select>
 
           <select id="video-select" class="rfloat">
+            <option value="0http://dash.edgesuite.net/envivio/EnvivioDash3/manifest.mpd">DASH</option>
             <option value="0therelaxatron2.mp4">The Relaxatron (mp4)</option>
             <option value="0therelaxatron.webm">The Relaxatron (webm)</option>
             <option value="1Vidcon5.mp4">Vidcon (mp4)</option>
