Add DASH sources

--- a/index.html
+++ b/index.html
@@ -155,8 +155,6 @@
       Your browser doesn't appear to support the HTML5 <code>&lt;canvas&gt;</code> element.
     </canvas>
     <video  class="hidden" preload="auto" id="video" loop="true" webkit-playsinline crossOrigin="anonymous">
-      <!-- data-dashjs-player -->
-      <!-- <source src="http://dash.edgesuite.net/envivio/EnvivioDash3/manifest.mpd" type="application/dash+xml"> -->
     </video>
     <!-- <video data-dashjs-player autoplay src="http://dash.edgesuite.net/envivio/EnvivioDash3/manifest.mpd" controls></video> -->
         <!-- Video Controls -->
@@ -181,7 +179,9 @@
           </select>
 
           <select id="video-select" class="rfloat">
-            <option value="0http://dash.edgesuite.net/envivio/EnvivioDash3/manifest.mpd">DASH</option>
+            <option value="0/dash/dolphin.mpd">Dolphin Progressive(DASH)</option>
+            <option value="0/dash/dolphin.mpd">Dolphin (DASH)</option>
+            <option value="0http://dash.edgesuite.net/envivio/EnvivioDash3/manifest.mpd">Demo (DASH)</option>
             <option value="0therelaxatron2.mp4">The Relaxatron (mp4)</option>
             <option value="0therelaxatron.webm">The Relaxatron (webm)</option>
             <option value="1Vidcon5.mp4">Vidcon (mp4)</option>
