Use a temp canvas to serve as a "pointer" to the seperate video blocks. Succeed on laptop, failed on wireless connected Android phones.

--- a/index.html
+++ b/index.html
@@ -127,9 +127,9 @@
     <canvas id="glcanvas">
       Your browser doesn't appear to support the HTML5 <code>&lt;canvas&gt;</code> element.
     </canvas>
-    <video class="hidden" id="video" controls>
-      <!-- <source src="car_2k_left.mp4" type="video/mp4"> -->
-    </video>
+    <!-- <video class="hidden" id="video"  controls>
+      <source src="car_2k_left.mp4" type="video/mp4">
+    </video> -->
         <!-- Video Controls -->
         <div id="video-controls" class="hidden">
           <a id="play-pause" class="fa fa-play icon" title="Play"></a>
